--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,14 @@ certifi==2020.4.5.1
 chardet==3.0.4
 Django==3.0.5
 djangorestframework==3.11.0
+djangorestframework-simplejwt==4.6.0
 idna==2.9
 importlib-metadata==1.6.0
 more-itertools==8.2.0
 packaging==20.3
 pluggy==0.13.1
 py==1.8.1
+PyJWT==2.0.1
 pyparsing==2.4.7
 pytest==5.4.1
 pytest-django==3.9.0
