--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,17 @@ Django==3.0.5
 django-filter==2.4.0
 djangorestframework==3.11.0
 djangorestframework-simplejwt==4.6.0
+flake8==3.8.4
 idna==2.9
 importlib-metadata==1.6.0
+isort==5.7.0
+mccabe==0.6.1
 more-itertools==8.2.0
 packaging==20.3
 pluggy==0.13.1
 py==1.8.1
+pycodestyle==2.6.0
+pyflakes==2.2.0
 PyJWT==2.0.1
 pyparsing==2.4.7
 pytest==5.4.1
